[project]
name = "blockchain-buddy-api"
version = "1.0.0"
description = "A blockchain and cryptocurrency assistant API powered by Google Gemini"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
app = "app:app"
